--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -7,4 +7,9 @@
        name: apache2
        state: present
      when: ansible_os_family=="Debian"
-
+   
+   - name: i want to start apache2 webserver (sudo service apache2 start) on ubuntu
+     service:
+        name: apache2
+        state: started
+     when: ansible_os_family=="Debian"  
